--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,13 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      # - uses: actions/checkout@v1
       - name: Get default branch from origin
         id: get-origin-default-branch
         uses: pipeline-foundation/get-origin-def-branch@v1.0.0
+        with: 
+          origin: DrFreeman-22/test-action
+
       - uses: ./action-a
         with:
           MY_NAME:  ${{ steps.get-origin-default-branch.outputs.default_branch }}
